<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgViewProduct"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/text_view"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/eyeglass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/txtProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:text="@string/product_name"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgViewProduct"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgViewProduct"
        app:layout_constraintTop_toBottomOf="@+id/imgViewProduct"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/product_price"
        android:textColor="@color/merlot"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtProductDisplay"
        app:layout_constraintEnd_toEndOf="@+id/txtProductName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtProductDisplay"
        app:layout_constraintTop_toBottomOf="@+id/txtProductName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtProductDisplay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="10dp"
        android:text="@string/product_price_display"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtProductPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductName" />

    <TextView
        android:id="@+id/txtProductDescDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/product_desc_display"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtProductPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtProductDisplay"
        app:layout_constraintTop_toBottomOf="@+id/txtProductPrice" />

    <TextView
        android:id="@+id/txtProductDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/text_view"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/product_description"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/txtProductDescDisplay"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtProductDescDisplay"
        app:layout_constraintTop_toBottomOf="@+id/txtProductDescDisplay" />

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/btn_add_cart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtProductDesc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtProductDesc"
        app:layout_constraintTop_toBottomOf="@+id/txtProductDesc"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/txtProductRevDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/product_reviews_display"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnAddToCart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnAddToCart"
        app:layout_constraintTop_toBottomOf="@+id/btnAddToCart"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/txtProductReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/text_view"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/product_reviews"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtProductRevDisplay"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtProductRevDisplay"
        app:layout_constraintTop_toBottomOf="@+id/txtProductRevDisplay"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>